--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!docTYPE html>
+<!DOCtype html>
 <html>
   <head>
     <title>embed</title>
     <meta property="og:url" content="https://m.youtube.com/watch?v=dQw4w9WgXcQ"/>
-    <meta property="og:title" content="Test"/>
+    <meta property="og:title" content=<dsp:valueof param="title"valueishtml="true"></dsp:valueof>/>
     <meta property="og:description" content="Testing"/>
   </head>
   <body>
